# rtcom-eventlogger

./: .gitignore  AUTHORS  COPYING  ChangeLog  Doxyfile  Makefile.am  autogen.sh  configure.ac  rtcom-eventlogger-uninstalled.pc.in  rtcom-eventlogger.pc.in
client/: Makefile.am  el-client.c
data/: Makefile.am  rtcom-eventlogger-backup.sh  rtcom-eventlogger-clean.sh  rtcom-eventlogger-postbackup.sh  rtcom-eventlogger-restore.sh  rtcom-eventlogger.conf  rtcom-eventlogger.supp
debian/: README  changelog  control  copyright  librtcom-eventlogger-testsuite.install  librtcom-eventlogger1.install  rtcom-eventlogger-client.install  rules
doc/: Makefile.am  event_logger.dia  event_logger_api_proposal.odt
rtcom-eventlogger/: db.h  event.h  eventlogger-attach-iter.h  eventlogger-iter.h  eventlogger-plugin.h  eventlogger-query.h  eventlogger-types.h  eventlogger.h
src/: Makefile.am  db.c  event.c  eventlogger-attach-iter.c  eventlogger-iter.c  eventlogger-marshalers.c  eventlogger-marshalers.h  eventlogger-plugin.c  eventlogger-query.c  eventlogger.c
tests/: Makefile.am  canned-data.c  canned-data.h  check_db.c  check_el.c  fail.h  runtests.sh  test-plugin.c  valgrind.supp
tools/: Makefile.am  lcov.am
